hphp/test/slow/parser/foreach-bad1.php.expectf
HipHop Fatal error: Can't use return value in write context in %s/test/slow/parser/foreach-bad1.php on line 5
